test: Run flake8 as part of test script
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ install:
   - pip install -e .
   - pip install coverage
   - pip install coveralls
+  - pip install flake8
+  - pip install flake8-docstrings
+  - pip install flake8-import-order
   - pip install mypy
+  - pip install pep8-naming
   - pip install pycodestyle
   - pip install pylint
 script: ./test.sh
